[DOC] Alteração da linguagem de escrita
Alteração da linguagem de escrita do português para o inglês às páginas de visualização

--- a/src/FTTBlazor/Pages/About/Crud.razor
+++ b/src/FTTBlazor/Pages/About/Crud.razor
@@ -21,8 +21,8 @@
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Exemplo</h4>
-        <h6>Abaixo uma serie de opções para CRUD e exemplos de como usar.</h6>
+        <h4>Example</h4>
+        <h6>Below is an example of how to use the series of components described in a simple CRUD application communicating with an API Rest.</h6>
     </div>
 
     <div style="height: 30rem; margin-bottom: -5rem;">
@@ -38,44 +38,45 @@
     <div class="mdl-cell--12-col">
         <h4>FTTEntity</h4>
         <h6>Interface precisa herdar desse objeto</h6>
+        <h6>The interface must implement FTTEntity object</h6>
         <img src="../img/about/crud2.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
-        <h6>Adicionando na pagina</h6>
+        <h4>Example</h4>
+        <h6>How to show information obtained from an API</h6>
         <img src="../img/about/crud1.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
-        <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
+        <h4>In the code</h4>
+        <h6>Below is an image of how to implement it in your system</h6>
         <img src="../img/about/crud.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Paginando no servidor</h4>
-        <h6>Aplique o QueryString para capturar as variaveis abaixo</h6>
-        <h6><span style="font-weight:bold;">pagesize:</span> Numero de itens no CRUD </h6>
-        <h6><span style="font-weight:bold;">currentpage:</span> Pagina atual</h6>
+        <h4>Paggin on the server</h4>
+        <h6>Apply the QueryString to capture the variables below</h6>
+        <h6><span style="font-weight:bold;">pagesize:</span> Number of itens to show</h6>
+        <h6><span style="font-weight:bold;">currentpage:</span> Current page</h6>
         <img src="../img/about/crud3.png" />
     </div>
 
     <div class="mdl-cell--12-col">
         <h4>Parametros do <span style="font-weight:bold;">FTTCrud</span></h4>
-        <h6><span style="font-weight:bold;">ModalContent:</span> Conteudo do Modal</h6>
-        <h6><span style="font-weight:bold;">Filter:</span> Filtro para os dados</h6>
-        <h6><span style="font-weight:bold;">OnBeforeAdd:</span> Evento para após criar um dado</h6>
-        <h6><span style="font-weight:bold;">OnAddClick:</span> Evento para antes de criar um dado</h6>
-        <h6><span style="font-weight:bold;">PageSize:</span> Numero de itens que vamos mostrar</h6>
-        <h6><span style="font-weight:bold;">Endpoint:</span> EndPoint da API com o padrão REST</h6>
-        <h6><span style="font-weight:bold;">Title:</span> Titulo do Modal</h6>
-        <h6><span style="font-weight:bold;">CanCreate:</span> Permissão para criar um item</h6>
-        <h6><span style="font-weight:bold;">CanDelete:</span> Permissão para deletar um item na tabela</h6>
-        <h6><span style="font-weight:bold;">CanEdit:</span> Permissão para editar um item na tabela</h6>
-        <h6><span style="font-weight:bold;">CanRead:</span> Permissão para ver um item na tabela</h6>
-        <h6><span style="font-weight:bold;">Columns:</span> Colunas que a tabela vai mostrar</h6>
-        <h6><span style="font-weight:bold;">Token:</span> Token para usar como parametro na requisição</h6>
+        <h6><span style="font-weight:bold;">ModalContent:</span> Modal content</h6>
+        <h6><span style="font-weight:bold;">Filter:</span> Data filter</h6>
+        <h6><span style="font-weight:bold;">OnBeforeAdd:</span> Call event after creating an item</h6>
+        <h6><span style="font-weight:bold;">OnAddClick:</span> Call event before creating an item</h6>
+        <h6><span style="font-weight:bold;">PageSize:</span> Number of itens to show</h6>
+        <h6><span style="font-weight:bold;">Endpoint:</span> API endpoint</h6>
+        <h6><span style="font-weight:bold;">Title:</span> Modal title</h6>
+        <h6><span style="font-weight:bold;">CanCreate:</span> Permission to create an item</h6>
+        <h6><span style="font-weight:bold;">CanDelete:</span> Permission to delete an item</h6>
+        <h6><span style="font-weight:bold;">CanEdit:</span> Permission to update an item</h6>
+        <h6><span style="font-weight:bold;">CanRead:</span> Permission to view an item</h6>
+        <h6><span style="font-weight:bold;">Columns:</span> Columns to be displayed in the table</h6>
+        <h6><span style="font-weight:bold;">Token:</span> Token to use as a parameter in the request</h6>
     </div>
 
 </div>
