--- a/src/FTTBlazor/Pages/About/Divider.razor
+++ b/src/FTTBlazor/Pages/About/Divider.razor
@@ -25,25 +25,25 @@
     </FTTGridDivider>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
-        <h6>Adicionando na pagina</h6>
+        <h4>Example</h4>
+        <h6>How to use the component in view page</h6>
         <img src="../img/about/divider1.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
-        <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
+        <h4>In the code</h4>
+        <h6>Below is an image of how to implement the component in your system</h6>
         <img src="../img/about/divider.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTGridDivider</span></h4>
-        <h6><span style="font-weight:bold;">AddButtonIsVisible:</span> Habilita o botão para adicionar, lembrando que o evento é customizado</h6>
-        <h6><span style="font-weight:bold;">Title:</span> Texto do header</h6>
-        <h6><span style="font-weight:bold;">AddButtonOnClick:</span> Aqui podemos adicionar a chamada do botão para adicionar</h6>
-        <h6><span style="font-weight:bold;">Iscollapsible:</span> Define se pode maximizar & minimizar</h6>
-        <h6><span style="font-weight:bold;">IsCollapsed:</span> Define o default se é maximizado ou minimizado</h6>
-        <h6><span style="font-weight:bold;">FTTFields:</span> Define se tem inputs para habilitar o grid</h6>
+        <h4><span style="font-weight:bold;">FTTGridDivider</span> attributes</h4>
+        <h6><span style="font-weight:bold;">AddButtonIsVisible:</span> Enable button to add an item (customizable callback event)</h6>
+        <h6><span style="font-weight:bold;">Title:</span> Header text</h6>
+        <h6><span style="font-weight:bold;">AddButtonOnClick:</span> Add button callback event to add an item</h6>
+        <h6><span style="font-weight:bold;">Iscollapsible:</span> Determines whether or not content visibility is optional</h6>
+        <h6><span style="font-weight:bold;">IsCollapsed:</span> Determines default visibility of the content</h6>
+        <h6><span style="font-weight:bold;">FTTFields:</span> Determines if there is data input to enable the grid</h6>
     </div>
 
 </div>
