--- a/src/FTTBlazor/Pages/About/Input.razor
+++ b/src/FTTBlazor/Pages/About/Input.razor
@@ -136,33 +136,33 @@
 
     <div class="mdl-cell--12-col">
         <h4>Exemplo</h4>
-        <h6>Abaixo uma serie de opções para CALENDAR e exemplos de como usar.</h6>
+        <h6>Below is an example of how to implement the CALENDAR input.</h6>
     </div>
 
     <FTTCalendar BorderRight="true" Size="4" Label="Check" @bind-Value="date"></FTTCalendar>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
-        <h6>Adicionando na pagina</h6>
+        <h4>Example</h4>
+        <h6>How to use the component in view page</h6>
         <img src="../img/about/input1.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
-        <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
+        <h4>In the code</h4>
+        <h6>Below is an image of how to implement the component in your system</h6>
         <img src="../img/about/calendar.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTCalendar</span></h4>
-        <h6><span style="font-weight:bold;">IsReadOnly:</span> Desabilita o componente</h6>
-        <h6><span style="font-weight:bold;">Label:</span> Texto do label</h6>
-        <h6><span style="font-weight:bold;">bind-Value:</span> Definimos a variavel que vai receber o dado</h6>
-        <h6><span style="font-weight:bold;">ValueChanged:</span> Aqui podemos adicionar a chamada de um metodo ao trocar o item</h6>
-        <h6><span style="font-weight:bold;">Required:</span> Obriga o preenchimento dentro de formulários com SUBMIT</h6>
-        <h6><span style="font-weight:bold;">Size:</span> Tamanho do componente na tela</h6>
-        <h6><span style="font-weight:bold;">BorderRight:</span> Adiciona uma borda a direita</h6>
-        <h6><span style="font-weight:bold;">Pattern:</span> Validações para o componente</h6>
+        <h4><span style="font-weight:bold;">FTTCalendar</span> attributes</h4>
+        <h6><span style="font-weight:bold;">IsReadOnly:</span> Boolean value that makes the element not mutable (the user can not edit it)</h6>
+        <h6><span style="font-weight:bold;">Label:</span> Label text</h6>
+        <h6><span style="font-weight:bold;">bind-Value:</span> Binds a value to a variable</h6>
+        <h6><span style="font-weight:bold;">ValueChanged:</span> Method callback when value has changed</h6>
+        <h6><span style="font-weight:bold;">Required:</span> Determines whether filling in the field is mandatory or not</h6>
+        <h6><span style="font-weight:bold;">Size:</span> Sets the element size</h6>
+        <h6><span style="font-weight:bold;">BorderRight:</span> Adds a border on the right</h6>
+        <h6><span style="font-weight:bold;">Pattern:</span> Validation pattern for input content</h6>
     </div>
 
 </div>
@@ -174,34 +174,34 @@
 
     <div class="mdl-cell--12-col">
         <h4>Exemplo</h4>
-        <h6>Abaixo uma serie de opções para CECKBOX e exemplos de como usar.</h6>
+        <h6>Below is an example of how to implement the CECKBOX input.</h6>
     </div>
 
     <FTTCheckbox BorderRight="true" Size="4" Label="Check" @bind-Value="check"></FTTCheckbox>
 
     <div class="mdl-cell--12-col">
-        <h4>Usando</h4>
-        <h6>Adicionando na pagina</h6>
+        <h4>Example</h4>
+        <h6>How to use the component in view page</h6>
         <img src="../img/about/input1.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
-        <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
+        <h4>In the code</h4>
+        <h6>Below is an image of how to implement the component in your system</h6>
         <img src="../img/about/checkbox.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTCheckbox</span></h4>
-        <h6><span style="font-weight:bold;">IsReadOnly:</span> Desabilita o componente</h6>
-        <h6><span style="font-weight:bold;">Label:</span> Texto do label</h6>
-        <h6><span style="font-weight:bold;">bind-Value:</span> Definimos a variavel que vai receber o dado</h6>
-        <h6><span style="font-weight:bold;">ValueChanged:</span> Aqui podemos adicionar a chamada de um metodo ao trocar o item</h6>
-        <h6><span style="font-weight:bold;">OnValueChanged:</span> Aqui podemos adicionar a chamada de um metodo OnValueChanged</h6>
-        <h6><span style="font-weight:bold;">Size:</span> Tamanho do componente na tela</h6>
-        <h6><span style="font-weight:bold;">Pattern:</span> Validações para o componente</h6>
-        <h6><span style="font-weight:bold;">Required:</span> Obriga o preenchimento dentro de formulários com SUBMIT</h6>
-        <h6><span style="font-weight:bold;">BorderRight:</span> Adiciona uma borda a direita</h6>
+        <h4><span style="font-weight:bold;">FTTCheckbox</span> attributes</h4>
+        <h6><span style="font-weight:bold;">IsReadOnly:</span> Boolean value that makes the element not mutable (the user can not edit it)</h6>
+        <h6><span style="font-weight:bold;">Label:</span> Label text</h6>
+        <h6><span style="font-weight:bold;">bind-Value:</span> Binds a value to a variable</h6>
+        <h6><span style="font-weight:bold;">ValueChanged:</span> Method callback when value has changed</h6>
+        <h6><span style="font-weight:bold;">OnValueChanged:</span> Callback method can be added to the OnValueChanged attribute</h6>
+        <h6><span style="font-weight:bold;">Size:</span> Sets the element size</h6>
+        <h6><span style="font-weight:bold;">Pattern:</span> Validation pattern for input content</h6>
+        <h6><span style="font-weight:bold;">Required:</span> Determines whether filling in the field is mandatory or not</h6>
+        <h6><span style="font-weight:bold;">BorderRight:</span> Binds a value to a variable</h6>
     </div>
 
 </div>
