--- a/src/FTTBlazor/Pages/Index.razor
+++ b/src/FTTBlazor/Pages/Index.razor
@@ -6,19 +6,19 @@
 
 <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
     <div class="mdl-cell mdl-cell--12-col mdl-grid">
-        <h2>Sobre</h2>
+        <h2>About</h2>
     </div>
 
-    <h6>Nosso projeto tem o intuito apresentar a solução da Microsoft para o WebAssembly chamada Blazor!</h6>
+    <h6>Our project aims to present Microsoft's solution for SPA and PWA applications called Blazor</h6>
     <h6>
-        Alem disso temos a proposta de agilizar o desenvolvimento com Blazor casando o pardão REST e
-        componentes criado por nós para desenvolvimento WEB usando o MaterialDesign como base.
+        In Addition, we have the proposal to speed up development in .NET environments by uniting the components 
+            developed by us using MaterialDesign as the main style sheet with the REST architecture pattern
     </h6>
 
     <div class="mdl-cell mdl-cell--12-col mdl-grid">
-        <h2>Orientador</h2>
+        <h2>Undergraduate thesis advisor</h2>
     </div>
-    
+
     <div class="mdl-cell--3-col">
     </div>
     <div class="mdl-cell--6-col">
@@ -27,25 +27,25 @@
     </div>    
     <div class="mdl-cell--3-col">
     </div>
-    
+
     <div class="mdl-cell mdl-cell--12-col mdl-grid">
-        <h2>Membros</h2>
+        <h2>Project developers</h2>
     </div>
 
     <div class="mdl-cell--6-col">
         <img src="../img/jho.png" class="img-center" />
-        <p class="text-center">Responsável pelo Angular, 082170016</p>
+        <p class="text-center">Responsible for Angular.js development, 082170016</p>
     </div>
     <div class="mdl-cell--6-col">
         <img src="../img/paulo.png" class="img-center" />
-        <p class="text-center">Responsável pelo teórica, 082170024</p>
+        <p class="text-center">Responsible for the scientific article, 082170024</p>
     </div>
     <div class="mdl-cell--6-col">
         <img src="../img/thiago.png" class="img-center" />
-        <p class="text-center">Responsável pela gerencia, 082170029</p>
+        <p class="text-center">Responsible for project management and scientific article, 082170029</p>
     </div>
     <div class="mdl-cell--6-col">
         <img src="../img/luiz.png" class="img-center" />
-        <p class="text-center">Responsável pelo Blazor, 082170039</p>
+        <p class="text-center">Responsible for Blazor WebAsembly development, 082170039</p>
     </div>
 </div>
